--- a/css/styles.css
+++ b/css/styles.css
@@ -679,3 +679,103 @@ body {
         height: 0;
     }
 }
+
+/* seguros y finanzas  */
+   .insurance-container {
+        max-width: 1200px;
+        margin: 0 auto;
+        padding: 20px;
+        font-family: Arial, sans-serif;
+    }
+    
+    .header-title {
+        text-align: center;
+        margin-bottom: 30px;
+    }
+    
+    .title-image {
+        max-width: 100%;
+        height: auto;
+        display: block;
+        margin: 0 auto;
+    }
+    
+    .content-wrapper {
+        display: flex;
+        gap: 20px;
+        margin-top: 30px;
+    }
+    
+    .description-box {
+        flex: 1;
+        background-color: #21A474;
+        padding: 20px;
+        border-radius: 25px;
+        color: white;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        position: relative;
+        min-height: 180px; /* Aumentamos la altura mínima */
+    }
+    
+    .description-icon {
+        width: 110px;
+        height: 110px;
+        position: absolute;
+        top: 20px; /* Aumentamos espacio superior */
+        left: 20px; /* Aumentamos espacio izquierdo */
+    }
+    
+    .description-content {
+        padding: 100px 20px 20px 140px; /* Ajustamos padding (superior e izquierdo) */
+        text-align: start;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    
+    .description {
+        margin: 0;
+        line-height: 2;
+        text-align: center;
+        margin-top: 20px; /* Espacio adicional arriba del texto */
+    }
+    .services-box {
+        flex: 1;
+        background-color: #06160D;
+        padding: 20px;
+        border-radius: 25px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
+    
+    .services-list {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+        color: white;
+    }
+    
+    .services-list li {
+        padding: 8px 0;
+        display: flex;
+        align-items: center;
+    }
+    
+    .check-icon {
+        margin-right: 10px;
+        font-weight: bold;
+    }
+    
+    @media (max-width: 768px) {
+        .content-wrapper {
+            flex-direction: column;
+        }
+        
+        .description-icon {
+            width: 60px;
+            height: 60px;
+        }
+        
+        .description-content {
+            padding: 70px 20px 20px 20px;
+        }
+    }
